2004-12-30  graydon hoare  <graydon@pobox.com>

	* constants.cc (netcmd_current_protocol_version): Set to 3.
	* tests/t_crlf.at: New test of crlf line encodings.
	* testsuite.at: Call it.
	* monotone.spec: Note 0.16 release.

2004-12-30  graydon hoare  <graydon@pobox.com>

	* win32/get_system_flavour.cc: Fix little compile bugs.

2004-12-30  Julio M. Merino Vidal  <jmmv@menta.net>

	* change_set.{cc,hh}: Add the has_renamed_file_src function in
	change_set::path_rearrangement.
	* commands.cc: Make the 'log' command show nothing for renamed or
	deleted files (when asked to do so) and stop going backwards in
	history when such condition is detected; they don't exist any more,
	so there is no point in showing history (and could drive to incorrect
	logs anyway).
	* tests/t_log_nonexistent.at: New check to verify previous.
	* testsuite.at: Add it.

2004-12-30  graydon hoare  <graydon@pobox.com>

	* Makefile.am: Clean full testsuite directory and full-version.
	* configure.ac: Bump version number.
	* po/monotone.pot: Regenerate.
	* NEWS: Describe new release.

2004-12-29  Julio M. Merino Vidal  <jmmv@menta.net>

	* tests/t_cmdline_options.at: New test for previous: ensure that
	monotone is actually checking for command line correctness.
	* testsuite.at: Add it.

2004-12-29  Julio M. Merino Vidal  <jmmv@menta.net>

	* monotone.cc: Verify that the command line is syntactically correct
	as regards to options (based on error codes from popt).

2004-12-29  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_drop_rename_patch.at: A test to check that deltas on
	renamed files are included in concatenate_change_sets, if there was a
	deletion of a file with the same name as the rename src.
	* testsuite.at: add it

2004-12-29  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Add Jordi.
	* change_set.{cc,hh}: Make sanity helpers const.
	(normalize_change_set): Drop a->a deltas.
	(merge_change_sets): Call normalize.
	(invert_change_set): Likewise.
	* revision.cc 