@@ -1,0 +1,21 @@
+AT_SETUP([pull a netsync branch which has a parent from another branch])
+AT_KEYWORDS([netsync])
+
+MONOTONE_SETUP
+NETSYNC_SETUP
+
+ADD_FILE(testfile, [blah stuff
+])
+COMMIT(testbranch)
+VER0=`BASE_REVISION`
+
+ADD_FILE(testfile2, [some more data
+])
+COMMIT(otherbranch)
+VER1=`BASE_REVISION`
+
+RUN_NETSYNC(pull, otherbranch)
+
+CHECK_SAME_STDOUT(MONOTONE ls certs $VER1, MONOTONE2 ls certs $VER1)
+
+AT_CLEANUP
