@@ -323,3 +323,4 @@ m4_include(tests/t_drop_rename_patch.at)
 m4_include(tests/t_cmdline_options.at)
 m4_include(tests/t_log_nonexistent.at)
 m4_include(tests/t_crlf.at)
+m4_include(tests/t_netsync_diffbranch.at)
