@@ -1,3 +1,9 @@
+2005-1-3  Matt Johnston  <matt@ucc.asn.au>
+
+	* tests/t_netsync_diffbranch.at: add a new test for pulling a branch
+	with a parent from a different branch.
+	* testsuite.at: add it
+
 2004-12-30  graydon hoare  <graydon@pobox.com>
 
 	* constants.cc (netcmd_current_protocol_version): Set to 3.
